Added "Copy URI" menu to Basic GUI.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8326 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -898,6 +898,7 @@
 	<!-- SEARCH WINDOW -->
 	<menu name="CSearchWnd.Basic">
 		<item id="ID_SEARCH_DOWNLOAD" text="_Download"/>
+		<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="_Browse User"/>
 		<item id="ID_SEARCH_CHAT" text="_Chat to User"/>
@@ -911,13 +912,13 @@
 		</menu>
 		<menu text="_Web Services">
 			<item id="ID_LIBRARY_BITZI_WEB" text="View _Bitzi Ticket"/>
-			<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
+			
 		</menu>
 	</menu>
 	<menu name="CSearchWnd">
 		<item id="ID_SEARCH_DOWNLOAD" text="_Download"/>
 		<item id="ID_SEARCH_DOWNLOADNOW" text="Download _Now"/>
-		<item id="ID_SEARCH_COPY" text="Copy _URI"/>
+		<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="Bro_wse User"/>
 		<item id="ID_SEARCH_CHAT" text="_Chat to User"/>
@@ -946,6 +947,7 @@
 	<menu name="CBrowseHostWnd.Basic">
 		<item id="ID_SEARCH_DOWNLOAD" text="_Download"/>
 		<item id="ID_SEARCH_DOWNLOADNOW" text="Download _Now"/>
+		<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_SEARCH_CHAT" text="_Chat to User"/>
 		<separator/>
@@ -956,15 +958,15 @@
 			<item id="ID_SEARCH_FOR_ALBUM" text="Music in the same _Album"/>
 			<item id="ID_SEARCH_FOR_SERIES" text="_Episodes in the same Series"/>
 		</menu>
-		<menu text="_Web File Info">
+		<menu text="_Web Services">
 			<item id="ID_LIBRARY_BITZI_WEB" text="View _Bitzi Ticket"/>
-			<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
+			
 		</menu>
 	</menu>
 	<menu name="CBrowseHostWnd">
 		<item id="ID_SEARCH_DOWNLOAD" text="_Download"/>
 		<item id="ID_SEARCH_DOWNLOADNOW" text="Download _Now"/>
-		<item id="ID_SEARCH_COPY" text="Copy _URI"/>
+		<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_SEARCH_CHAT" text="_Chat to User"/>
 		<separator/>
@@ -988,7 +990,7 @@
 	<!-- HIT MONITOR WINDOW -->
 	<menu name="CHitMonitorWnd">
 		<item id="ID_SEARCH_DOWNLOAD" text="_Download"/>
-		<item id="ID_SEARCH_COPY" text="Copy _URI"/>
+		<item id="ID_SEARCH_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="_Browse User"/>
 		<item id="ID_SEARCH_CHAT" text="_Chat to User"/>
@@ -1024,9 +1026,8 @@
 		<item id="ID_DOWNLOADS_CLEAR_INCOMPLETE" text="_Cancel Download"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_SOURCES" text="_Find More Sources"/>
-		<!-- <separator/>
-		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/> -->
+		<separator/>
+		<item id="ID_DOWNLOADS_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 	</menu>
@@ -1046,7 +1047,7 @@
 		<menu text="_Advanced">
 			<item id="ID_DOWNLOADS_SHARE" text="_Share File"/>
 			<separator/>
-			<item id="ID_DOWNLOADS_COPY" text="_Copy URI"/>
+			<item id="ID_DOWNLOADS_COPY" text="Copy _URI..."/>
 			<item id="ID_DOWNLOADS_URL" text="_Add Source..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_MONITOR" text="Monitor _Window"/>
@@ -1064,7 +1065,7 @@
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="_Browse User"/>
 		<item id="ID_TRANSFERS_CHAT" text="_Chat to User"/>
-		<item id="ID_DOWNLOADS_COPY" text="Copy _URI"/>
+		<item id="ID_DOWNLOADS_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_TRANSFERS_DISCONNECT" text="_Disconnect"/>
 		<item id="ID_TRANSFERS_FORGET" text="_Forget"/>
@@ -1081,7 +1082,7 @@
 		<item id="ID_DOWNLOADS_ENQUEUE" text="_Add to Playlist"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Clear"/>
 		<separator/>
-		<item id="ID_DOWNLOADS_COPY" text="Copy _URI"/>
+		<item id="ID_DOWNLOADS_COPY" text="Copy _URI..."/>
 		<separator/>
 		<item id="ID_DOWNLOADS_FILE_DELETE" text="_Delete File"/>
 		<item id="ID_DOWNLOADS_RATE" text="_Rate File..."/>
@@ -1207,6 +1208,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI..."/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
@@ -1237,7 +1239,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
-		<item id="ID_LIBRARY_URL" text="Copy _URI"/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI..."/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
@@ -1275,6 +1277,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI..."/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
@@ -1309,7 +1312,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
-		<item id="ID_LIBRARY_URL" text="Copy _URI"/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI..."/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
